# esd-crawl

./: .gitignore  LICENSE.md  Makefile  README.md  esd.ny.gov_Project.phj  parsehub.csv  pyproject.toml  reports.json  scrapy.cfg  test.sh
.github/workflows/: test.yml
esd_crawl/: airtable.py  combine.py  excel.py  extract.ipynb  formatting.py  items.py  parse.py  parsehub.py  pdf_lib.py  pdf_set.py  pipeline.py  pipelines.py  scraper.py  settings.py  spider.py  tables.py
esd_crawl/spiders/: broken.py  esd.py  reports.py  utils.py
results/: broken.csv  broken.json
scripts/: airtable.py  combine.py  parse.py  parsehub.py  scanned.py
tests/: conftest.py  helpers.py  test_airtable.py  test_combine.py  test_items.py  test_parsehub.py  test_pdf_lib.py  test_pdf_set.py  test_table_finder.py
tests/spiders/: test_broken.py
