[tool.poetry]
name = "esd-crawl"
version = "0.1.0"
description = ""
authors = ["Aidan Feldman <aidan.feldman@gmail.com>"]
readme = "README.md"
packages = [{include = "esd_crawl"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
