[tool.poetry]
authors = ["Aidan Feldman <aidan.feldman@gmail.com>"]
description = ""
name = "esd-crawl"
packages = [{include = "esd_crawl"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
Scrapy = "^2.6.3"
python = "^3.10"
pdfplumber = "^0.7.5"
jupyter = "^1.0.0"
notebook = "^6.4.12"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
