[tool.poetry]
authors = ["Aidan Feldman <aidan.feldman@gmail.com>"]
description = ""
name = "esd-crawl"
packages = [{include = "esd_crawl"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
Scrapy = "^2.6.3"
jupyter = "^1.0.0"
mypy = "^0.982"
notebook = "^6.4.12"
pdfplumber = "^0.7.5"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
python = "^3.10"
requests = "^2.28.1"
responses = "^0.22.0"
scrapy-playwright = "^0.0.22"
types-requests = "^2.28.11.2"
flake8 = "^5.0.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "scrapy.*"
